--- a/Tests/ElementsTests/ElementsTests.csproj
+++ b/Tests/ElementsTests/ElementsTests.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Fonlow.Testing.ServiceCore" Version="3.1.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
     <PackageReference Include="XMLDiffPatch" Version="1.0.8.28" />
