--- a/Tests/TestOutlookSync/TestOutlookSync.csproj
+++ b/Tests/TestOutlookSync/TestOutlookSync.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D611B623-CA31-4153-A77A-9D71F93E772A}</ProjectGuid>
+    <ProjectGuid>{FA2FC894-998F-4D9E-A3FA-FDBCBB11C2F2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TestOcLocalDataSource</RootNamespace>
-    <AssemblyName>TestOcLocalDataSource</AssemblyName>
+    <RootNamespace>TestOutlookSync</RootNamespace>
+    <AssemblyName>TestOutlookSync</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -56,55 +56,82 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DDay.Collections">
+      <HintPath>..\..\3rdParty\DDAYICAL\DDay.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="DDay.iCal">
+      <HintPath>..\..\3rdParty\DDAYICAL\DDay.iCal.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.Office.Interop.Outlook, Version=14.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <HintPath>..\3rdParty\PIA\Office14\Microsoft.Office.Interop.Outlook.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
     <Reference Include="System.Data" />
+    <Reference Include="System.Data.DataSetExtensions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
-    <Reference Include="vCard, Version=1.1.0.0, Culture=neutral, PublicKeyToken=14211f6543d49911, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\3rdParty\vCard.dll</HintPath>
-    </Reference>
-    <Reference Include="vCardSifc, Version=1.1.0.0, Culture=neutral, PublicKeyToken=14211f6543d49911, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\3rdParty\vCardSifc.dll</HintPath>
-    </Reference>
-    <Reference Include="XmlDiffPatch, Version=1.0.8.28, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\3rdParty\XmlDiffPatch.dll</HintPath>
+    <Reference Include="vCard">
+      <HintPath>..\..\3rdParty\vCard.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="OCLocalDataSourceTest.cs" />
+    <Compile Include="CalendarTest.cs" />
+    <Compile Include="NotesTest.cs" />
+    <Compile Include="ContactsIntegrationTests.cs" />
+    <Compile Include="OutlookContactsTest.cs" />
+    <Compile Include="OutlookItemsTestBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XmlToSyncMLSyncCommandsForVcardTest.cs" />
-    <Compile Include="XmlToSyncMLSyncCommandsTest.cs" />
+    <Compile Include="TasksTest.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Shadow Include="Test References\Fonlow.SyncML.OCLocalDataSource.accessor" />
+    <Content Include="AuthoringTests.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OCLocalDataSource\OCLocalDataSource.csproj">
-      <Project>{BAD76931-4B29-43ED-B487-863D43477C10}</Project>
-      <Name>OCLocalDataSource</Name>
+    <ProjectReference Include="..\..\MsOutlookSync\MsOutlookSync.csproj">
+      <Project>{B658979F-7B55-4EF3-831C-A6BDFC855173}</Project>
+      <Name>MsOutlookSync</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SyncCommonFunc\SyncCommonFunc.csproj">
+    <ProjectReference Include="..\..\OutlookCalendar\OutlookCalendar.csproj">
+      <Project>{4A7F7A21-A8C2-40E7-9446-15168E18E444}</Project>
+      <Name>OutlookCalendar</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\OutlookCommon\OutlookCommon.csproj">
+      <Project>{857BD4AE-B7F9-48C5-B8A1-1250AD0D8343}</Project>
+      <Name>OutlookCommon</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\OutlookContacts\OutlookContacts.csproj">
+      <Project>{F008961E-387D-4AC1-A5C7-BABF093853DA}</Project>
+      <Name>OutlookContacts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\OutlookNotes\OutlookNotes.csproj">
+      <Project>{B5B67EE1-DC8D-45DA-BEBC-72DC50673579}</Project>
+      <Name>OutlookNotes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\OutlookTasks\OutlookTasks.csproj">
+      <Project>{F1B91A6A-73AA-4A71-9AC9-B667BC751A90}</Project>
+      <Name>OutlookTasks</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\SyncCommonFunc\SyncCommonFunc.csproj">
       <Project>{1C6C8F32-DFAB-47D8-8893-354560DBE84B}</Project>
       <Name>SyncCommonFunc</Name>
     </ProjectReference>
-    <ProjectReference Include="..\SyncMLDataSourceShared\SyncMLDataSourceShared.csproj">
-      <Project>{B2A358B7-7EE6-4F9F-B903-317BF9F773E0}</Project>
-      <Name>SyncMLDataSourceShared</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\SyncMLElements\SyncMLElements.csproj">
+    <ProjectReference Include="..\..\SyncMLElements\SyncMLElements.csproj">
       <Project>{DA16AB4B-8352-4A7D-89F2-2714E8D4678E}</Project>
       <Name>SyncMLElements</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0">
@@ -128,6 +155,7 @@
       <Install>true</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
